fix zoom on mobile

--- a/public/stylus/style.styl
+++ b/public/stylus/style.styl
@@ -649,3 +649,6 @@ input[type="text"].edit
     -ms-transform: rotateX(0deg)
     transform: rotateX(0deg)
     opacity: 1
+
+@media (min-width: 0px) and (orientation:portrait)
+    // phone portrait mode
